pom.xml: pass --enable-preview --source ${javase.version}