@@ -26,6 +26,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+						<arg>--source</arg><arg>${javase.version}</arg>
+					</compilerArgs>
 					<excludes>
 
 						<!-- javafx not included in some JDK distributions. -->
